# Engine-Game_3D

./: .gitignore  CMakeLists.txt  README  README.md  backup_CMakeLists.txt_glad  backup_CMakeLists.txt_glfw  backup_CMakeLists.txt_glm  backup_CMakeLists.txt_stb  backup_CMakeLists.txt_tinygltf  backup_CMakeLists.txt_yaml  copyCode.ps1  generatedCopy.txt  installLibrary.ps1
assets/bee/: 79342.fbx  79342.mtl
assets/jake/: scene.gltf
config/: config.yaml  entities.yaml  entities_scene2.yaml
include/: Camera.h  ComponentManager.h  Config.h  Coordinator.h  ECSPlayerController.h  EntityLoader.h  FileUtils.h  FixedOffsetCameraStrategy.h  GLDebug.h  ICameraControlStrategy.h  IObserver.h  IShaderFactory.h  Light.h  LightManager.h  Logger.h  Material.h  Model.h  ModelLoader.h  ModelLoaderHelper.h  ModelNode.h  PlayerController.h  RenderComponent.h  RenderSystem.h  ResourceManager.h  Scene.h  SceneNode.h  Shader.h  ShaderFactory.h  Subject.h  Submesh.h  System.h  SystemManager.h  Texture2D.h  TransformComponent.h  UniformBuffer.h
include/components/: RenderComponent.h
include/core/: ComponentManager.h  Coordinator.h  ECS.h  EntityLoader.h  EntityManager.h  ModelLoader.h
include/engine/: Camera.h  ECSPlayerController.h  Light.h  LightManager.h  Scene.h  SceneManager.h  SceneResources.h
include/renderer/: IShaderFactory.h  Model.h  ResourceManager.h  Shader.h  ShaderFactory.h  Submesh.h  Texture2D.h
include/systems/: RenderSystem.h  System.h
include/utils/: FileUtils.h  GLDebug.h  UniformBuffer.h
libs/assimp/lib/: zlibstatic.lib
libs/assimp/lib/Release/: assimp-vc143-mt.exp
libs/assimp/lib/pkgconfig/: assimp.pc
libs/freetype/lib/: freetype.lib
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/lib/: glfw3.lib
libs/glfw/src/: cmake_install.cmake  glfw3.pc
libs/glfw/src/glfw.dir/Release/: glfw3.lib.recipe
libs/glfw/src/glfw.dir/Release/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
libs/glm/lib/: glm.lib
libs/tinygltf/lib/: tinygltf.lib
libs/yaml/lib/: yaml-cpp.lib
libs/yaml/lib/pkgconfig/: yaml-cpp.pc
libs/yamldebug/lib/pkgconfig/: yaml-cpp.pc
scenes/: scene1.cpp  scene1.h  scene2.cpp  scene2.h
shaders/: debug_albedo_fragment.glsl  ground_fragment.glsl  pbr_fragment.glsl  pbr_vertex.glsl
src/: AudioModule.h  Camera.h  Config.cpp  Engine.cpp  Engine.h  EntityLoader.cpp  FileUtils.h  InputModule.h  Light.h  LightManager.h  Logger.h  Main.cpp  Material.cpp  Material.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelLoaderHelper.cpp  ModelNode.h  Module.h  PhysicsModule.h  PlayerController.cpp  PlayerController.h  RenderSystem.cpp  RendererModule.h  ResourceManager.cpp  ResourceManager.h  Scene.h  SceneNode.h  SceneResources.cpp  ScriptingModule.h  Shader.h  Submesh.h  Texture2D.h  UIModule.h  UniformBuffer.h  stb_image.cpp
test/: CMakeLists.txt  SceneSwitchingTest.cpp
